tests/baselines/reference/for-of30.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of30.ts(16,15): error TS2759: The 'return' property of an iterator must be a method.


==== tests/cases/conformance/es6/for-ofStatements/for-of30.ts (1 errors) ====
    class _StringIterator {
        next() {
            return {
                done: false,
                value: ""
            }
        }
    
        return = 0;
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new _StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~~
!!! error TS2759: The 'return' property of an iterator must be a method.